--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
+<head>
+<meta name="google-site-verification" content="2dMY4kHjvNpMvVlUGbXQcGhGxwG10yhNOu5mj5-8M7c" />
+</head>
+
 <h1>welcome to tech world</h1>
