--- a/index.html
+++ b/index.html
@@ -1,5 +1,96 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta name="google-site-verification" content="2dMY4kHjvNpMvVlUGbXQcGhGxwG10yhNOu5mj5-8M7c" />
+  <meta charset="UTF-8">
+  <title>Microsoft Power BI Advanced Features</title>
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+      background-color: #f9f9f9;
+      color: #333;
+      line-height: 1.6;
+    }
+    h1, h2 {
+      color: #222;
+    }
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      margin-top: 40px;
+      font-size: 0.9em;
+      color: #777;
+    }
+  </style>
+  <meta name="google-site-verification" content="2dMY4kHjvNpMvVlUGbXQcGhGxwG10yhNOu5mj5-8M7c" />
 </head>
+<body>
 
-<h1>welcome to tech world</h1>
+  <h1>Microsoft Power BI Advanced Features</h1>
+
+  <p>This course is tailored for professionals seeking to explore advanced capabilities in Microsoft Power BI. It’s an ideal learning path for those who want to build expert-level dashboards, manage complex datasets, and prepare for certification-level challenges.</p>
+
+  <p><a href="https://www.igmguru.com/data-science-bi/power-bi-certification-training" target="_blank">View Full Course on igmGuru →</a></p>
+
+  <h2>1. Working with Data Hierarchies</h2>
+  <p>Understand how to organize data into hierarchical levels and enable users to explore details through drill-down actions in visuals.</p>
+
+  <h2>2. In-built Slicers and Custom Slicers • Date Slicer</h2>
+  <p>Explore different slicer options, including date filters and customized slicers, to enhance report interactivity and user control.</p>
+
+  <h2>3. Working with Reference Lines</h2>
+  <p>Learn how to add reference lines in charts to highlight targets, averages, or important thresholds for better data context.</p>
+
+  <h2>4. Dynamic Texts • Measures for Dynamic Texts</h2>
+  <p>Use DAX formulas to make visual titles and labels change based on filters, making your reports more responsive and informative.</p>
+
+  <h2>5. Dynamic Tooltips</h2>
+  <p>Add tooltips that display detailed data on hover, offering users a deeper look at data without crowding visuals.</p>
+
+  <h2>6. Filters • Types of Filters • Visualization Filters • Page Filters • Report Filters</h2>
+  <p>Gain clarity on how different filters work in Power BI, from visual-specific filters to full report-level filters, and when to use each.</p>
+
+  <h2>7. Drill Through • Creating Drill Through Reports</h2>
+  <p>Enable users to right-click visuals and access detailed pages that relate to the selected data for deeper exploration.</p>
+
+  <h2>8. Developing KPIs</h2>
+  <p>Design visual indicators that highlight progress toward goals using metrics and color-coded thresholds.</p>
+
+  <h2>9. Parameters • Types of Parameters • Linking Parameters with Datasets • Creating Parameters for Data Sources • Creating Parameters for File Paths</h2>
+  <p>Understand how to set up different parameters and connect them with data models, allowing flexible inputs for files and data queries.</p>
+
+  <h2>10. Templates • Difference between Reports & Templates</h2>
+  <p>Learn the difference between building a one-time report versus reusable templates and how to design each effectively.</p>
+
+  <h2>11. Key Influencers</h2>
+  <p>Use the Key Influencers visual to uncover patterns that influence results and understand drivers behind specific outcomes.</p>
+
+  <h2>12. What-If Parameters • Creating What-If Parameters • Case Study on What-If Parameters</h2>
+  <p>Set up what-if scenarios that allow users to test outcomes based on different input values, with practical examples.</p>
+
+  <h2>13. PL-300 Question & Answers</h2>
+  <p>Review sample questions and explanations to help prepare for the PL-300 certification exam and test your understanding.</p>
+
+  <h2>14. Interactions • Edition Interactions</h2>
+  <p>Control how report visuals respond to user actions by configuring interactions, making dashboards more intuitive.</p>
+
+  <h2>15. Selection Pane • Hiding / UnHiding Using Selection Pane</h2>
+  <p>Manage visibility of elements in your report using the Selection Pane, allowing for cleaner layout control and design flexibility.</p>
+
+  <h2> Power BI Advanced Features</h2>
+  <p>Wrap up with a comprehensive view of all advanced features, solidifying your skills for real-time reporting challenges.</p>
+
+  <footer>
+    Based on content from igmGuru. For reference and educational use only.
+  </footer>
+
+</body>
+</html>
+
