--- a/ccsp-roadmap.html
+++ b/ccsp-roadmap.html
@@ -101,7 +101,7 @@
       <li>CSA STAR for cloud security assessments</li>
       <li>NIST Cybersecurity Framework for policy alignment</li>
       <li>OWASP tools to secure cloud-native apps</li>
-      <li>SIEM platforms such as Splunk and QRadar</li>
+      <li>SIEM platforms such as <a href="https://www.igmguru.com/big-data/splunk-training">Splunk</a> and QRadar</li>
       <li>Cloud-based Data Loss Prevention (DLP) systems</li>
     </ul>
 
@@ -113,7 +113,7 @@
     <a href="https://www.igmguru.com/cyber-security/ccsp-isc2-certification-training" class="cta-button">View Full CCSP Training Program</a>
 
     <footer>
-      <p>Based on content from igmGuru. For reference and educational use only.</p>
+      <p>Based on content from <a href="https://www.igmguru.com/">igmGuru</a>. For reference and educational use only.</p>
     </footer>
   </div>
 </body>
