--- a/ccsp-roadmap.html
+++ b/ccsp-roadmap.html
@@ -69,7 +69,7 @@
   <div class="container">
     <h1>CCSP Roadmap</h1>
     <p>
-      The Certified Cloud Security Professional (CCSP) program offers professionals a clear path to mastering cloud security practices. This roadmap outlines the important platforms, tools, and design principles you'll need to understand as you prepare for certification. Whether you're expanding your expertise or just starting your journey into cloud security, this guide provides a structured overview to help you move forward with confidence.
+      The Certified Cloud Security Professional (CCSP) program offers professionals a clear path to mastering cloud security practices. This roadmap outlines the important platforms, tools, and design principles you'll need to understand as you prepare for certification. Whether you're expanding your expertise or just starting your journey into cloud security,  this guide based on insights from <a href="https://www.igmguru.com/">igmGuru</a> provides a structured overview to help you move forward with confidence.
     </p>
 
     <h2>Popular Cloud Platforms in Focus</h2>
@@ -113,7 +113,7 @@
     <a href="https://www.igmguru.com/cyber-security/ccsp-isc2-certification-training" class="cta-button">View Full CCSP Training Program</a>
 
     <footer>
-      <p>Based on content from <a href="https://www.igmguru.com">igmGuru</a>. For reference and educational use only.</p>
+      <p>Based on content from <a href="https://www.igmguru.com/">igmGuru</a>. For reference and educational use only.</p>
     </footer>
   </div>
 </body>
