--- a/ccsp-roadmap.html
+++ b/ccsp-roadmap.html
@@ -113,7 +113,7 @@
     <a href="https://www.igmguru.com/cyber-security/ccsp-isc2-certification-training" class="cta-button">View Full CCSP Training Program</a>
 
     <footer>
-      <p>Based on content from <a href="https://www.igmguru.com/">igmGuru</a>. For reference and educational use only.</p>
+      Based on content from <a href="https://www.igmguru.com/">igmGuru</a>. For reference and educational use only.
     </footer>
   </div>
 </body>
